<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="com.example.guen.maket.MainActivity">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fountain"/>

            <ToggleButton
                android:id="@+id/fountain_light"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:background="@drawable/check"
                android:checked="false"
                android:textOff=""
                android:textOn=""
                android:onClick="fountain_light_Click"
                tools:layout_editor_absoluteX="246dp"
                tools:layout_editor_absoluteY="71dp" />
            <ToggleButton
                android:id="@+id/fountain_gear"
                android:layout_width="39dp"
                android:layout_height="35dp"
                android:background="@drawable/gear"
                android:checked="false"
                android:textOff=""
                android:textOn=""
                tools:layout_editor_absoluteX="246dp"
                tools:layout_editor_absoluteY="71dp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/garage"/>

            <ToggleButton
                android:id="@+id/garage_light"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:background="@drawable/check"
                android:checked="false"
                android:textOff=""
                android:textOn=""
                tools:layout_editor_absoluteX="246dp"
                tools:layout_editor_absoluteY="71dp" />
            <ToggleButton
                android:id="@+id/garage_gear"
                android:layout_width="39dp"
                android:layout_height="35dp"
                android:background="@drawable/gear"
                android:checked="false"
                android:textOff=""
                android:textOn=""
                tools:layout_editor_absoluteX="246dp"
                tools:layout_editor_absoluteY="71dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/roadBlock"/>

            <ToggleButton
                android:id="@+id/roadBlock_gear"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:background="@drawable/gear"
                android:checked="false"
                android:textOff=""
                android:textOn=""
                tools:layout_editor_absoluteX="246dp"
                tools:layout_editor_absoluteY="71dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/outside"/>

            <ToggleButton
                android:id="@+id/outside_light"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:background="@drawable/check"
                android:checked="false"
                android:textOff=""
                android:textOn=""
                tools:layout_editor_absoluteX="246dp"
                tools:layout_editor_absoluteY="71dp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/room1"/>

            <ToggleButton
                android:id="@+id/room1_light"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:background="@drawable/check"
                android:checked="false"
                android:textOff=""
                android:textOn=""
                tools:layout_editor_absoluteX="246dp"
                tools:layout_editor_absoluteY="71dp" />
            <ToggleButton
                android:id="@+id/room1_gear"
                android:layout_width="39dp"
                android:layout_height="35dp"
                android:background="@drawable/gear"
                android:checked="false"
                android:textOff=""
                android:textOn=""
                tools:layout_editor_absoluteX="246dp"
                tools:layout_editor_absoluteY="71dp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/room2"/>

            <ToggleButton
                android:id="@+id/room2_light"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:background="@drawable/check"
                android:checked="false"
                android:textOff=""
                android:textOn=""
                tools:layout_editor_absoluteX="246dp"
                tools:layout_editor_absoluteY="71dp" />
            <ToggleButton
                android:id="@+id/room2_gear"
                android:layout_width="39dp"
                android:layout_height="35dp"
                android:background="@drawable/gear"
                android:checked="false"
                android:textOff=""
                android:textOn=""
                tools:layout_editor_absoluteX="246dp"
                tools:layout_editor_absoluteY="71dp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/room3"/>

            <ToggleButton
                android:id="@+id/room3_light"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:background="@drawable/check"
                android:checked="false"
                android:textOff=""
                android:textOn=""
                tools:layout_editor_absoluteX="246dp"
                tools:layout_editor_absoluteY="71dp" />
            <ToggleButton
                android:id="@+id/room3_gear"
                android:layout_width="39dp"
                android:layout_height="35dp"
                android:background="@drawable/gear"
                android:checked="false"
                android:textOff=""
                android:textOn=""
                tools:layout_editor_absoluteX="246dp"
                tools:layout_editor_absoluteY="71dp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/room4"/>

            <ToggleButton
                android:id="@+id/room4_light"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:background="@drawable/check"
                android:checked="false"
                android:textOff=""
                android:textOn=""
                tools:layout_editor_absoluteX="246dp"
                tools:layout_editor_absoluteY="71dp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/room5"/>

            <ToggleButton
                android:id="@+id/room5_light"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:background="@drawable/check"
                android:checked="false"
                android:textOff=""
                android:textOn=""
                tools:layout_editor_absoluteX="246dp"
                tools:layout_editor_absoluteY="71dp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/room6"/>

            <ToggleButton
                android:id="@+id/room6_light"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:background="@drawable/check"
                android:checked="false"
                android:textOff=""
                android:textOn=""
                tools:layout_editor_absoluteX="246dp"
                tools:layout_editor_absoluteY="71dp" />
        </LinearLayout>

</LinearLayout>
